...
        Spacer(Modifier.height(20.dp))

        LocationSelectorCaption(
            latLng = currentCoords,
            address = currentAddress,
            Modifier
                .testTag("location_selector_caption")
                .clickable(onClick = onSetLocationPickerExpanded)
                .padding(vertical = 10.dp)
                .padding(horizontalContentPadding),
        )
        HorizontalDivider(thickness = Dp.Hairline)
        Box(
...
                inputField = {
                    BaseSearchInputField(
                        LOCATION_SEARCH_PLACEHOLDER,
                        collapsedTextFieldState,
                        searchBarState,
                        modifier = Modifier
                            .testTag("location_search_input")
                            .fillMaxWidth(),
                        leadingIcon = {
                            NavBackButton({ onSetExpanded(false) })
                        },
                    )
                },
...
